# nikke_sim

./: Charactor.py  NIKKE_charactor_sheet.csv  README.md  main.py  pyproject.toml  requirements.txt  test.py
docs/: ClassDiagrams.md
module/: combat_power_calc.py
src/: api.py  character.py  service.py
