[project]
name = "nikke-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "types-requests>=2.32.4.20250913",
]
